# mffhelper

./: README.md  pyproject.toml
abx_scores/: apps.py
aliances/: admin.py  apps.py  models.py
aliances/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py
heroes/: admin.py  models.py
heroes/migrations/: 0001_initial.py  0002_hero_charindex_hero_latestuniform.py  0002_hero_gender_hero_language_hero_profileimage_and_more.py  0003_hero_uniformname.py
ocr_functions/: apps.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
